--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,12 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
+
+    # Force SSL
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{REQUEST_METHOD} !=POST
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
