--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql10.freemysqlhosting.net
 DB_PORT=3306
-DB_DATABASE=sale-manager
-DB_USERNAME=root
-DB_PASSWORD=qaz789
+DB_DATABASE=sql10168709
+DB_USERNAME=sql10168709
+DB_PASSWORD=unbMHvFRJL
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
